mis en place du routeur

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,6 @@
 <app-header></app-header>
-<app-cocktails class="flex-auto"></app-cocktails>
+<!-- <app-cocktails class="flex-auto"></app-cocktails> -->
+<div class="flex-auto flex flex-col">
+  <router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
