--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,10 @@
 <div class="flex-auto text-bold text-lg">Cocktails</div>
 <ul class="xs-hide flex flex-row gap-16">
   <li>
-    <a href="#">Liste des cocktails</a>
+    <a routerLink="/cocktails" routerLinkActive="active-link">Cocktails</a>
   </li>
   <li>
-    <a href="#">Panier</a>
+    <a routerLink="/cart">Panier</a>
   </li>
 </ul>
 <app-header-menu class="hide xs-show" />
