--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,7 +4,7 @@
     <a routerLink="/cocktails" routerLinkActive="active-link">Cocktails</a>
   </li>
   <li>
-    <a routerLink="/cart">Panier</a>
+    <a routerLink="/cart" routerLinkActive="active-link">Panier</a>
   </li>
 </ul>
 <app-header-menu class="hide xs-show" />
