mis en place de l'interface administrateur

--- a/src/app/components/header/header-menu/header-menu.component.html
+++ b/src/app/components/header/header-menu/header-menu.component.html
@@ -3,7 +3,9 @@
 <ul>
   @for (link of navigations; track $index) {
   <li (click)="show.set(false)" [class.mb-20]="!$last">
-    <a [routerLink]="link.path" routerLinkActive="active-link">{{ link.name }}</a>
+    <a [routerLink]="link.path" routerLinkActive="active-link">{{
+      link.name
+    }}</a>
   </li>
   }
 </ul>
