--- a/src/app/views/cart/components/cart-ingredients-list/cart-ingredients-list.component.html
+++ b/src/app/views/cart/components/cart-ingredients-list/cart-ingredients-list.component.html
@@ -1,6 +1,8 @@
 <h2 class="mb-20">Liste des ingrédients</h2>
 <ul>
-    <!-- @for ( of ; track ) { -->
-      
-    <!-- } -->
+  @for (ingredient of ingredientDisplays(); track $index) {
+  <li class="my-2">{{ ingredient[0] }} : <strong>{{ ingredient[1] }}</strong></li>
+  } @empty {
+  <p>Aucun ingrédient n'a été ajouté pour le moment</p>
+  }
 </ul>
