--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -58,8 +58,9 @@ body {
   background-color: var(--dark);
 }
 
-input {
+input, textarea {
   border: var(--border);
+  font-family: var(--font-family);
   border-radius: 6px;
   padding: 12px;
 }
@@ -68,4 +69,14 @@ input {
   background-color: var(--dark);
   border-radius: var(--radius);
   color: white;
+}
+
+.error {
+  color: var(--danger);
+  font-size: 12px;
+  font-weight: 500;
+}
+
+button[disabled] {
+  opacity: 0.5;
 }
